--- a/README.org
+++ b/README.org
@@ -9,11 +9,9 @@ I am not a programmer. This is designed to be a PROTOTYPE. You will encounter er
 
 The code you will encounter is awful. I learned elisp /while/ writing this package. I worked in very short bursts while doing my real job (lawyer). If it seemed to work, I used it and moved on. 
 
-I do not have time to work on this, and am hoping this will inspire someone to pick this up. 
- 
 This /should/ work with the ~sample.org~ file that is in the TEST directory. To use it, you’ll have change line 180 so that ~org-map-entries~ points to the sample file rather than using your ~agenda~ files. 
 
-When I say I learned elisp while writing this, I mean that literally. I did not know anything, and so this is 100% amateur hackery. 
+UPDATE: I am making slow progress on making this usable to people generally. Help is welcomed!
 
 ** Generating the chart
 
@@ -152,5 +150,5 @@ Usual emacs keybindings, except:
 | Return | Open agenda for the date at point |
 | b, f   | Jump to next entry on line        |
 ** Other features
-b
-There are other features, but I have forgotten them due to the lag between when I stopped working on this and when I uploaded it.
+
+There are other features, but I have forgotten them due to the lag between when I stopped working on this and when I uploaded it. 
